fixing grid, readme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="col mx-xl-5 mx-xs-0">
 
     <div style="text-align: center;"><h1 id="Change">Javascript Quiz</h1></div>
-    <div class="card" style="width: 70rem;">
+    <div class="card" >
       <a href="#" class="btn btn-primary" onclick="startTest()">Start Test</a>
         <p id="score">Current Score: 0</p>
         <div class="card-body">
@@ -43,17 +43,6 @@
     </div>
     <div class="col mx-xl-5 mx-xs-0">
 
-    </div>
-    <div class="row">
-
-        <div class="col mx-xl-5 mx-xs-0"></div>
-      
-        <div class="col mx-xl-5 mx-xs-0">
-          <div class="col text-center text-break my-4">
-            <p id="sub-heading" class="text-white text-break"></p>
-        </div>
-
-        </div><div class="col mx-xl-5 mx-xs-0">
     </div>
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog" role="document">
