fixed a penalty issue

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             </div>
 
-            <a href="#" class="btn btn-primary" onclick="submitScoreToLeaderboard()">Submit Score</a>
+            <a href="#" class="btn btn-primary" id="submitScore" onclick="submitScoreToLeaderboard()">Submit Score</a>
           </form>
         </div>
       </div>
