some html fixes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p id="score">Current Score: 0</p>
         <div class="card-body">
           <h5 class="card-title" id="Timer"></h5>
-          <p class="card-text"><h2 id="Question"></h2></p>
+          <h2 id="Question"></h2>
           
           <form id="Q">
             <input type="radio" id="A1" name="Question" value="A1">
